--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-server.port=8081
+server.port=8080
 
 spring.datasource.url = jdbc:mysql://localhost:3306/art?serverTimezone=UTC
 spring.datasource.username = art
-spring.datasource.password = danil11Kim!
+spring.datasource.password = danil11kim
 
 private.session-timeout = 10
